- Explicit Docker-style tar route now requires all manifest config references to resolve to tar entries, preventing partial config payload shells from passing strict routing.
- Explicit Docker-style tar route now requires canonical root marker paths (`manifest.json`, `repositories`), preventing nested lookalike marker paths from satisfying strict Docker tar routing.
- Explicit OCI tar strict route now requires manifest digest references to resolve to blob entries, preventing unrelated blob padding from satisfying strict OCI tar evidence.
- Explicit OCI tar strict route now requires digest references for every manifest entry when manifests are present, preventing partial/digestless OCI tar manifest shells from passing strict routing.
- Explicit OCI tar strict route now requires canonical root marker paths (`oci-layout`, `index.json`), preventing nested lookalike marker paths from satisfying strict OCI tar routing.
- Added regression coverage for OCI layout/tar digest-required strict paths (missing digest refs and digest-mismatch scenarios) in adapter and CLI smoke suites.
- Explicit compose route now fails closed when service placeholders exist without valid indented service entries or without `image`/`build` evidence, while still allowing build-only compose service definitions.
- Explicit compose route now requires `image`/`build` evidence to be inside a service block, preventing out-of-service image placeholders from passing strict compose routing.
- Explicit SBOM route now fails closed when package/component evidence is empty, preventing empty SBOM shells from passing strict container SBOM analysis.
- SBOM JSON parsing now emits bounded package/component counts when present.
- Signature/cert adapter extraction deepened:
- Deterministic PEM block counting for certificate/PKCS7/signature material.
- Strict PEM envelope evidence now requires decodable DER-like payload bytes; malformed PEM payload wrappers no longer pass explicit signature routing.